--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,16 @@
+body {
+    display : flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-end;
+}
 div {
     background-repeat: no-repeat;
-    width: 300px;
-    height: 300px;
+    width: 20px;
+    height: 20px;
     background-size: contain;
-    color: white;
+    background-image: url("../images/cig.jpg");
+    margin: auto;
+    border: 1px solid red;
 }
 
-.sunny {
-    background-image: url("../images/sunny.jpg");
-}
-.sun_rain {
-    background-image: url("../images/tenor.gif");
-}
-.rain{
-    background-image: url("../images/rain.gif");
-}
-.cloudy{
-    background-image: url("../images/cloudy.jpg");
-}
