--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,17 @@
-body {
-    display : flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-end;
+.paciokas {
+    display: inline-block;
+    padding: 2px;
+    margin: 5px;
+    border: 1px solid black;
+    background-color: grey;
 }
-div {
-    background-repeat: no-repeat;
+.ciza {
     width: 20px;
     height: 20px;
-    background-size: contain;
+    margin: 2px 2px 0 2px;
+    border: 1px solid black;
+    display: inline-block;
     background-image: url("../images/cig.jpg");
-    margin: auto;
-    border: 1px solid red;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
-
