--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,14 @@
-.paciokas {
-    display: inline-block;
-    padding: 2px;
-    margin: 5px;
-    border: 1px solid black;
-    background-color: grey;
-}
-.ciza {
-    width: 20px;
-    height: 20px;
-    margin: 2px 2px 0 2px;
-    border: 1px solid black;
-    display: inline-block;
-    background-image: url("../images/cig.jpg");
-    background-size: contain;
+div{
     background-repeat: no-repeat;
+    background-size: cover;
+    width: 150px;
+    height: 150px;
+}
+.eggplant{
+    color: darkmagenta;
+    background-image: url(../images/eggplant.gif);
+}
+.bamboo{
+    color: darkcyan;
+    background-image: url(../images/bamboo.gif);
 }
