array ir for each kartojimas 2 uzduotis su pataisymais

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ span {
     background-size: cover;
     width: 150px;
     height: 150px;
+    display: inline-block;
 }
 .kibiras {
     color: darkmagenta;
