darom 5tadeinio uzduoty nuo pradziu po truputi

--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,59 @@
 
-.class-1, .class-0 {
-    width: 200px;
-    height: 200px;
-    background-size: contain;
+body {
+    font-size: 20pt;
     background-repeat: no-repeat;
+    background-size: cover;
 }
-.class-1 {
-    background-image: url('../images/bamboo.gif');
+.about-0 {
+    background-image: url('../images/white.jpg');
+    color: black;
 }
-.class-0 {
-    background-image: url('../images/eggplant.gif');
+.about-1 {
+    background-image: url('../images/black.jpg');
+    color: white;
 }
-.flex {
-    display: flex;
+
+.backgroundimg {
+    background-image: url('../images/friend.png');
+    text-align: center;
 } 
+.hashas {
+    color: green;
+}
+.bg-about {
+    color: white;
+    background-image: url('../images/bg_about.jpg');
+}
+.bg-about h1, .bg-about h2 {
+    margin-left: 20px;
+    padding: 5px;
+    border-radius: 2px;
+    float: left;
+    clear: both;
+    background-color: rgba(0,0,0,0.5);
+}
+nav {
+    width: 100%;
+    display: flex;
+}
+a {
+    margin: 0 0 20px 70px;
+    color: white;
+}
+a span {
+    padding: 5px;
+    background-color: rgba(0,0,0,0.5);
+}
+a:hover {
+    color: gold;
+}
+.termometras {
+    display: flex;
+    flex-direction: row;
+    height: 300px;
+    widh: 1000px
+}
+.padala{
+    height: 30px;
+    widh: 100px
+}
