--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,14 @@
 #flexContainer {
     display: flex;
-
 }
 .block {
-    width: 150px;
-    height: 50px;
+    width: 160px;
+    height: 60px;
     border: 1px solid black;
     margin: 20px;
-    text-align: center;
-    font-size: 45px;
+    font-size: 50px;
+    justify-content: center;
+    display: flex;
 }
 .green {
     background-color: green;
@@ -21,4 +21,6 @@
 }
 .apskritimas {
     border-radius: 50%;
+    width: 60px;
+    height: 60px;
 }
