darom 5tadeinio uzduoty nuo pradziu po truputi su funkcija 3dalis be refernce sudetingesne fja

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,9 @@
 .red {
     background-color:#8C2100;
 }
+.pilka {
+    background-color: grey;
+}
 .apskritimas {
     border-radius: 50%;
     width: 60px;
